--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.11"
 dependencies = [
+    "numpy",
+    "assist"
+    "astropy",
+    "rebound",
+    "pooch",
+    "tqdm"
 ]
 
 [project.scripts]
