--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dynamic = ["version"]
 requires-python = ">=3.11"
 dependencies = [
     "numpy",
-    "assist"
+    "assist",
     "astropy",
     "rebound",
     "pooch",
