Created the layup command line function
Created layup_cmdline function using sorcha_cmdline as a template. Created 4 temporary dummy functions (predict, bootstrap, orbitfit and visualise) that can be executed and also have an optional argument.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,11 @@ dependencies = [
 ]
 
 [project.scripts]
-layup = "layup.layup:main"
+layup = "layup_cmdline.main:main"
+layup-visualise = "layup_cmdline.visualise:main"
+layup-orbitfit = "layup_cmdline.orbitfit:main"
+layup-predict = "layup_cmdline.predict:main"
+layup-bootstrap = "layup_cmdline.bootstrap:main"
 
 [project.urls]
 "Source Code" = "https://github.com/Smithsonian/layup"
