--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -11,10 +11,12 @@ on:
 
 jobs:
   build:
-    max-parallel: 4
+    strategy:
+      max-parallel: 4
       matrix:
         os: ['macos-latest','ubuntu-latest']
         python-version: ['3.10', '3.11']
+
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
