created init cmdline function
Created init cmd_line function. Init creates a default config file from the repository into the users cwd.

Fixed a bug with all the command line arguments that affected them when pip installing layup. I recommend making a new layup env to cleanly  pip install layup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ layup-visualize = "layup_cmdline.visualize:main"
 layup-orbitfit = "layup_cmdline.orbitfit:main"
 layup-predict = "layup_cmdline.predict:main"
 layup-bootstrap = "layup_cmdline.bootstrap:main"
+layup-init = "layup_cmdline.init:main"
 
 [project.urls]
 "Source Code" = "https://github.com/Smithsonian/layup"
