Created config parser dataclass layupConfigs
Created layupConfigs dataclass to read a config file. Added unit tests for new functions created for fileAccessUtils, layupConfigs and layupCopyConfigs

--- a/src/layup/config_setups/Default_config_file.ini
+++ b/src/layup/config_setups/Default_config_file.ini
@@ -22,8 +22,7 @@ leap_seconds_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/lsk/naif00
 
 meta_kernel = meta_kernel.txt
 
-observatory_codes = ObsCodes.json
-observatory_codes_compressed = ObsCodes.json.gz
+observatory_codes= ObsCodes.json.gz
 observatory_codes_url = https://minorplanetcenter.net/Extended_Files/obscodes_extended.json.gz
 
 orientation_constants = pck00010.pck
