--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ layup-init = "layup_cmdline.init:main"
 # On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
 [project.optional-dependencies]
 dev = [
-    "black", # Used for static linting of files
+    "black==23.7.0", # Used for static linting of files
     "jupyter", # Clears output from Jupyter notebooks
     "pre-commit", # Used to run checks before finalizing a git commit
     "pytest",
