Update CLI `bootstrap` to download various files needed for ASSIST and REBOUND.

--- a/src/layup/config_setups/default_config.ini
+++ b/src/layup/config_setups/default_config.ini
@@ -22,8 +22,8 @@ leap_seconds_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/lsk/naif00
 
 meta_kernel = meta_kernel.txt
 
-observatory_codes= ObsCodes.json.gz
-observatory_codes_url = https://minorplanetcenter.net/Extended_Files/obscodes_extended.json.gz
+observatory_codes_compressed = ObsCodes.json.gz
+observatory_codes_compressed_url = https://minorplanetcenter.net/Extended_Files/obscodes_extended.json.gz
 
 orientation_constants = pck00010.pck
 orientation_constants_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/pck/pck00010.tpc
