Updates to comments to clarify how to change URL and file names for files to download with `bootstrap`.

--- a/src/layup/config_setups/default_config.ini
+++ b/src/layup/config_setups/default_config.ini
@@ -1,4 +1,6 @@
 [AUXILIARY]
+# If you want to download a different URL, you must change BOTH the URL and the file name.
+
 planet_ephemeris = de440s.bsp
 planet_ephemeris_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/planets/de440s.bsp
 
