--- a/src/layup/config_setups/default_config.ini
+++ b/src/layup/config_setups/default_config.ini
@@ -1,4 +1,6 @@
 [AUXILIARY]
+# If you want to download a different URL, you must change BOTH the URL and the file name.
+
 planet_ephemeris = de440s.bsp
 planet_ephemeris_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/planets/de440s.bsp
 
@@ -22,8 +24,8 @@ leap_seconds_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/lsk/naif00
 
 meta_kernel = meta_kernel.txt
 
-observatory_codes= ObsCodes.json.gz
-observatory_codes_url = https://minorplanetcenter.net/Extended_Files/obscodes_extended.json.gz
+observatory_codes_compressed = ObsCodes.json.gz
+observatory_codes_compressed_url = https://minorplanetcenter.net/Extended_Files/obscodes_extended.json.gz
 
 orientation_constants = pck00010.pck
 orientation_constants_url = https://naif.jpl.nasa.gov/pub/naif/generic_kernels/pck/pck00010.tpc
