--- a/.github/workflows/pre-commit-ci.yml
+++ b/.github/workflows/pre-commit-ci.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
+        git submodule update --init
         python -m pip install --upgrade pip
         pip install .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
