--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -27,11 +27,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        git submodule update --init
         pip install -e .
         pip install -e .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run unit tests with pytest
       run: |
+        export LD_LIBRARY_PATH=$(pwd):$LD_LIBRARY_PATH
         python -m pytest --cov=layup --cov-report=xml
     - name: Upload coverage report to codecov
       uses: codecov/codecov-action@v5
