Created layup comet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ layup-predict = "layup_cmdline.predict:main"
 layup-bootstrap = "layup_cmdline.bootstrap:main"
 layup-init = "layup_cmdline.init:main"
 layup-convert = "layup_cmdline.convert:main"
+layup-comet = "layup_cmdline.comet:main"
 
 [project.urls]
 "Source Code" = "https://github.com/Smithsonian/layup"
