Update pyproject.toml to use lastest main from sorcha's github repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "rebound",
     "pooch",
     "tqdm",
-    "sorcha"
+    "sorcha @ git+https://github.com/dirac-institute/sorcha.git"
 ]
 
 [project.scripts]
