Implement `convert` logic. (#73)
* Implement `convert` logic.

* Add round trip conversion test

* BCART to BCOM conversion.

* Fix test_convert_round_trip_csv

* test_convert_round_trip_hdf5 now passes

* Fix convert_cli appending the file extension for hdf5 files

* Cleaned up convertion and added support for all formats.

* In progress test for round trip conversion formats

* WIP - getting close to all conversions working. Still need help with B/KEP.

* Cleanup of test_convert.py

* Clean up of _apply_convert

* Update comments

* Fixing cli_args issue, and addressing single row issue.

* Update pyproject.toml to use lastest main from sorcha's github repo

---------

Co-authored-by: Wilson Beebe <wbeebe@uw.edu>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "astropy",
     "pooch",
     "tqdm",
-    "sorcha"
+    "sorcha @ git+https://github.com/dirac-institute/sorcha.git"
 ]
 
 [project.scripts]
