--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ layup-bootstrap = "layup_cmdline.bootstrap:main"
 layup-init = "layup_cmdline.init:main"
 layup-convert = "layup_cmdline.convert:main"
 layup-comet = "layup_cmdline.comet:main"
+layup-demo = "layup_cmdline.demo:main"
 
 [project.urls]
 "Source Code" = "https://github.com/Smithsonian/layup"
