Adding pytest-xdist to parallelize unit tests in pre-commit and github workflows.

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Run unit tests with pytest
       run: |
         export LD_LIBRARY_PATH=$(pwd):$LD_LIBRARY_PATH
-        python -m pytest
+        python -m pytest -n auto
