--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Run unit tests with pytest
       run: |
         export LD_LIBRARY_PATH=$(pwd):$LD_LIBRARY_PATH
-        python -m pytest --cov=layup --cov-report=xml
+        python -m pytest -n auto --cov=layup --cov-report=xml
     - name: Upload coverage report to codecov
       uses: codecov/codecov-action@v5
       with:
