--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -93,7 +93,7 @@ repos:
       - id: pytest-check
         name: Run unit tests
         description: Run unit tests with pytest.
-        entry: bash -c "if python -m pytest --co -qq; then python -m pytest; fi"
+        entry: bash -c "if python -m pytest -n auto --co -qq; then python -m pytest -n auto; fi"
         language: system
         pass_filenames: false
         always_run: true
